syntax = "proto3";

package main;

option go_package = "./proto";

// 添加公司收发货地址
message AddCompanyAddressReq {
  int64 id = 1; //主键ID
  string address_name = 2; //地址名称
  string name = 3; //收发货人姓名
  string phone = 4; //收货人电话
  string province = 5; //省/直辖市
  string city = 6; //市
  string region = 7; //区
  string detail_address = 8; //详细地址
  int32 send_status = 9; //默认发货地址：0->否；1->是
  int32 receive_status = 10; //默认收货地址：0->否；1->是
  int64 create_by = 11; //创建人ID
}

message AddCompanyAddressResp {
  string pong = 1;
}

// 删除公司收发货地址
message DeleteCompanyAddressReq {
  repeated int64 ids = 1;
}

message DeleteCompanyAddressResp {
  string pong = 1;
}

// 更新公司收发货地址
message UpdateCompanyAddressReq {
  int64 id = 1; //主键ID
  string address_name = 2; //地址名称
  string name = 3; //收发货人姓名
  string phone = 4; //收货人电话
  string province = 5; //省/直辖市
  string city = 6; //市
  string region = 7; //区
  string detail_address = 8; //详细地址
  int32 send_status = 9; //默认发货地址：0->否；1->是
  int32 receive_status = 10; //默认收货地址：0->否；1->是
  int64 update_by = 13; //更新人ID
}

message UpdateCompanyAddressResp {
  string pong = 1;
}

// 更新公司收发货地址状态
message UpdateCompanyAddressStatusReq {
  int64 id = 1; //主键ID
  int32 status = 2; //默认发货地址：0->否；1->是
  int64 update_by = 4; //更新人ID
}

message UpdateCompanyAddressStatusResp {
  string pong = 1;
}

// 查询公司收发货地址详情
message QueryCompanyAddressDetailReq {
    int64 id = 1;
}

message QueryCompanyAddressDetailResp {
  int64 id = 1; //主键ID
  string address_name = 2; //地址名称
  string name = 3; //收发货人姓名
  string phone = 4; //收货人电话
  string province = 5; //省/直辖市
  string city = 6; //市
  string region = 7; //区
  string detail_address = 8; //详细地址
  int32 send_status = 9; //默认发货地址：0->否；1->是
  int32 receive_status = 10; //默认收货地址：0->否；1->是
  int64 create_by = 11; //创建人ID
  string create_time = 12; //创建时间
  int64 update_by = 13; //更新人ID
  string update_time = 14; //更新时间

}

// 分页查询公司收发货地址列表
message QueryCompanyAddressListReq {
  string address_name = 1; //地址名称
  string name = 2; //收发货人姓名
  string phone = 3; //收货人电话
  int32 send_status = 4; //默认发货地址：0->否；1->是
  int32 receive_status = 5; //默认收货地址：0->否；1->是
  int32 page_num = 6; //第几页
  int32 page_size = 7; //每页的数量
}

message CompanyAddressListData {
  int64 id = 1; //主键ID
  string address_name = 2; //地址名称
  string name = 3; //收发货人姓名
  string phone = 4; //收货人电话
  string province = 5; //省/直辖市
  string city = 6; //市
  string region = 7; //区
  string detail_address = 8; //详细地址
  int32 send_status = 9; //默认发货地址：0->否；1->是
  int32 receive_status = 10; //默认收货地址：0->否；1->是
  int64 create_by = 11; //创建人ID
  string create_time = 12; //创建时间
  int64 update_by = 13; //更新人ID
  string update_time = 14; //更新时间

}

message QueryCompanyAddressListResp {
  int64 total = 1;
  repeated  CompanyAddressListData list = 2;
}

// 公司收发货地址
service CompanyAddressService {
  // 添加公司收发货地址
  rpc AddCompanyAddress(AddCompanyAddressReq) returns (AddCompanyAddressResp){}
  // 删除公司收发货地址
  rpc DeleteCompanyAddress(DeleteCompanyAddressReq) returns (DeleteCompanyAddressResp){}
  // 更新公司收发货地址
  rpc UpdateCompanyAddress(UpdateCompanyAddressReq) returns (UpdateCompanyAddressResp ){}

  // 查询公司收发货地址详情
   rpc QueryCompanyAddressDetail(QueryCompanyAddressDetailReq) returns (QueryCompanyAddressDetailResp){}
  // 查询公司收发货地址列表
  rpc QueryCompanyAddressList(QueryCompanyAddressListReq) returns (QueryCompanyAddressListResp){}

  // 更新公司默认发货地址
  rpc UpdateCompanyAddressSendStatus(UpdateCompanyAddressStatusReq) returns (UpdateCompanyAddressStatusResp ){}
  // 更新公司默认收货地址
  rpc UpdateCompanyAddressReceiveStatus(UpdateCompanyAddressStatusReq) returns (UpdateCompanyAddressStatusResp ){}
}
